--- a/dbtest2/Views/Web.config
+++ b/dbtest2/Views/Web.config
@@ -40,4 +40,9 @@
       </assemblies>
     </compilation>
   </system.web>
+
+  <!--<connectionStrings>
+    <add name="ParkingDb"
+         connectionString=""/>
+  </connectionStrings>-->
 </configuration>
