--- a/dbtest2/dbtest2.csproj
+++ b/dbtest2/dbtest2.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Context\CarDb.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -143,6 +144,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\login\Logo-small-bottom.png" />
+    <Content Include="Content\img\login\logo.png" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\bootstrap.min.css" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\demo.css" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\light-bootstrap-dashboard.css" />
@@ -248,6 +251,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Login\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
