[#5] 회원가입 기능
- Register 구현

--- a/dbtest2/Web.config
+++ b/dbtest2/Web.config
@@ -80,8 +80,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DBCS"
-     connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=xe)));User Id=ann;Password=111111;"
-     providerName="Oracle.DataAccess.Client" />
+    <add name="DBCS" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=xe)));User Id=ann;Password=111111;" providerName="Oracle.DataAccess.Client" />
   </connectionStrings>
 </configuration>
