[#5] 로그인 입력 form 만들기
- 로그인 성공 시 LoginSuccess 페이지로 이동

- 로그인 후에도 로그인, 회원가입 버튼이 나옴

todo: 로그인 성공 시 로그아웃이 나오도록

--- a/dbtest2/dbtest2.csproj
+++ b/dbtest2/dbtest2.csproj
@@ -418,7 +418,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\TableList.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\LoginSuccess.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
