--- a/dbtest2/Web.config
+++ b/dbtest2/Web.config
@@ -79,7 +79,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
+  <!--db 연결 위해-->
   <connectionStrings>
     <add name="DBCS" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=xe)));User Id=ann;Password=111111;" providerName="Oracle.DataAccess.Client" />
   </connectionStrings>
+  
+  <!--쿠키 설정 위해-->
+  <system.web>
+    <authentication mode="Forms">
+      <forms name=".TEST" protection="All" path="/" timeout="1440" loginUrl="https://localhost:44377/login/login" enableCrossAppRedirects="true" />
+    </authentication>
+  </system.web>
+
 </configuration>
