--- a/dbtest2/dbtest2.csproj
+++ b/dbtest2/dbtest2.csproj
@@ -316,6 +316,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\img\login\Logo-small-bottom.png" />
     <Content Include="Content\img\login\logo.png" />
+    <Content Include="Content\img\login\user_pic.jpg" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\bootstrap.min.css" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\demo.css" />
     <Content Include="Content\light-bootstrap-dashboard\assets\css\light-bootstrap-dashboard.css" />
@@ -418,7 +419,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\TableList.cshtml" />
-    <Content Include="Views\Home\LoginSuccess.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
