[#2] 출차 시 리스트에서 삭제

--- a/dbtest2/dbtest2.csproj
+++ b/dbtest2/dbtest2.csproj
@@ -425,6 +425,7 @@
     <Content Include="Views\Login\Register.cshtml" />
     <Content Include="Views\Login\UserProfile.cshtml" />
     <Content Include="Views\Home\TableInsert.cshtml" />
+    <Content Include="Views\Home\TableDelete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
