[#25] DapperHelper 클래스 생성
- db 커넥션 스트링의 반복을 줄이기 위해
- 라이브러리 클래스 생성 후 참조 추가

- 입차시 차량 번호 alert

--- a/dbtest2/dbtest2.csproj
+++ b/dbtest2/dbtest2.csproj
@@ -442,6 +442,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ParkingApplication.Lib\ParkingApplication.Lib.csproj">
+      <Project>{e1fa29a5-ff35-4d7f-85ea-63678d56eea5}</Project>
+      <Name>ParkingApplication.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
